--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="intro-section about">
-                <h1 class="title">about me</h1>
+                <h1 class="title">About Me</h1>
                 <p class="paragraph">
                     Hi everyone, I am a web designer, graduated from QODR, Indonesian and my major is Web Development. I
                     recently try my
